--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.2",
         "axios": "^0.21",
+        "bulma": "^0.9.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "ts-loader": "^9.2.5",
+        "typescript": "^4.3.5",
         "vue": "^3.2.2",
         "vue-loader": "^16.5.0"
     },
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@inertiajs/inertia": "^0.10.1",
-        "@inertiajs/inertia-vue3": "^0.5.2",
-        "bulma": "^0.9.3"
+        "@inertiajs/inertia-vue3": "^0.5.2"
     }
 }
